@startuml
'https://plantuml.com/sequence-diagram

abstract class BaseProp {
'道具类
    + BaseProp(int locationX, int locationY,int prop_speed)
    + {abstract} activeProp(HeroAircraft):void
}


class BloodProp {
'加血道具类
    + BloodProp(int locationX, int locationY,int prop_speed)
    + activeProp(HeroAircraft):void
}

class BombProp {
'炸弹道具类
    + BombProp(int locationX, int locationY,int prop_speed)
    + activeProp(HeroAircraft):void
}

class BulletProp {
'火力道具类
    + BulletProp(int locationX, int locationY,int prop_speed)
    + activeProp(HeroAircraft):void
}

BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp

interface PropFactory{
    + {abstract} createProp(int locationX, int locationY):BaseProp
}
class BloodPropFactory {
     + createProp(int locationX, int locationY):BaseProp
}
class BombPropFactory {
    + createProp(int locationX, int locationY):BaseProp
}
class BulletPropFactory {
    + createProp(int locationX, int locationY):BaseProp
}

PropFactory <|.. BloodPropFactory
PropFactory <|.. BombPropFactory
PropFactory <|.. BulletPropFactory

BloodPropFactory ..> BloodProp:"«create»"
BombPropFactory ..> BombProp:"«create»"
BulletPropFactory ..> BulletProp:"«create»"

SuperEnemy ..> PropFactory
BaseGame ..> BaseProp

@enduml